# Benchmark_Package_Managers

./: README.md  benchmark_package_managers.ipynb  pyproject.toml  requirements.txt
